// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete /> context default props renders correctly  1`] = `
<div
  className="autocomplete"
>
  <input
    autoComplete="RANDOM_KEY"
    className="autocompleteField"
    onChange={[Function]}
    type="text"
    value=""
  />
  <AutocompleteResults
    inputRef={
      Object {
        "current": null,
      }
    }
    itemTemplate={[Function]}
    onChange={[Function]}
    results={Array []}
    searching={false}
  />
</div>
`;

exports[`<Autocomplete /> context with empty results renders correctly  1`] = `
<div
  className="autocomplete"
>
  <input
    autoComplete="RANDOM_KEY"
    className="autocompleteField"
    onChange={[Function]}
    type="text"
    value=""
  />
  <AutocompleteResults
    inputRef={
      Object {
        "current": null,
      }
    }
    itemTemplate={[Function]}
    onChange={[Function]}
    results={Array []}
    searching={false}
  />
</div>
`;

exports[`<Autocomplete /> context with results renders correctly  1`] = `
<div
  className="autocomplete"
>
  <input
    autoComplete="RANDOM_KEY"
    className="autocompleteField"
    onChange={[Function]}
    type="text"
    value=""
  />
  <AutocompleteResults
    inputRef={
      Object {
        "current": null,
      }
    }
    itemTemplate={[Function]}
    onChange={[Function]}
    results={
      Array [
        Object {
          "label": "abc",
          "value": 1,
        },
        Object {
          "label": "abc2",
          "value": 2,
        },
      ]
    }
    searching={false}
  />
</div>
`;

exports[`<Autocomplete /> context with text typed renders correctly  1`] = `
<div
  className="autocomplete"
>
  <input
    autoComplete="RANDOM_KEY"
    className="autocompleteField"
    onChange={[Function]}
    type="text"
    value="text"
  />
  <AutocompleteResults
    inputRef={
      Object {
        "current": null,
      }
    }
    itemTemplate={[Function]}
    onChange={[Function]}
    results={Array []}
    searching={false}
  />
</div>
`;
